--- a/docker-compose.yaml.example
+++ b/docker-compose.yaml.example
@@ -2,9 +2,7 @@ version: "3.9"
 
 services:
   satontdev:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/satont/satontdev:latest
     ports:
       - "3000:3000"
     volumes:
